added integrated codes